--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.2",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/native": "7.0.0-alpha.18",
     "@react-navigation/native-stack": "7.0.0-alpha.20",
