--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-navigation/drawer": "7.0.0-alpha.21",
     "@react-navigation/native": "7.0.0-alpha.18",
     "@react-navigation/native-stack": "7.0.0-alpha.20",
     "@react-navigation/stack": "7.0.0-alpha.20",
@@ -19,13 +20,14 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
