--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-print": "~13.0.1",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-native": "0.74.2",
