--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sri-tech-qutation-app-3",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -32,6 +32,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-toast-notifications": "^3.4.0",
     "zustand": "^4.5.2"
   },
