--- a/app.json
+++ b/app.json
@@ -2,16 +2,11 @@
   "expo": {
     "name": "Quotations",
     "slug": "quotation-generator",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "orientation": "portrait",
     "backgroundColor": "#1C1C1C",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "dark",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#151515"
-    },
     "ios": {
       "supportsTablet": true
     },
@@ -19,6 +14,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
+      },
+      "splash": {
+        "image": "./assets/splash.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#1C1C1C"
       },
       "package": "com.dinujaya_s.quotationgenerator"
     },
