--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "react-native-element-dropdown": "^2.12.1",
+    "react-native-element-dropdown": "github:Dinujaya-Sandaruwan/react-native-element-dropdown#master",
     "typescript": "^5.3.3"
   },
   "private": true
