--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sri-tech-qutation-app-3",
-  "version": "2.2.0",
+  "version": "3.4.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "lefthook": "^1.7.2",
     "react-native-element-dropdown": "github:Dinujaya-Sandaruwan/react-native-element-dropdown#master",
     "typescript": "^5.3.3"
   },
